# mftind

./: CMakeLists.txt  README.md  format-sources.sh  istatcollector.h  matcher.cpp  matcher.h  readme.md  statcollector.cpp  statcollector.h
.github/workflows/: release.yml
src/: CMakeLists.txt  imatcher.h  main.cpp  threadedmatcher.h  threadedmathcer.cpp  version.cpp  version.h
